# aninas

./: Dockerfile  Makefile  README.md  compose-dev.yaml  compose.yaml  main.py  pyproject.toml
.woodpecker/: ruff.yaml
aninas/: __init__.py  __main__.py  constant.py
aninas/database/: redis.py
aninas/plugins/: agac.py  anime_girls.py  arch.py  codeberg.py  codeberg_url.py  currency.py  images.py  mal.py  misc.py  quote.py  sata-andagi.py  sata_andagi.py  tmdb.py  utils.py  uwu.py
aninas/types/: __init__.py  agac.py  codeberg.py  sata_andagi.py
aninas/utils/: agac.py  anime_girls.py  arch.py  codeberg.py  embed.py  embeds.py  images.py  mal.py  messages.py  quote.py  redis.py  sata_andagi.py  stats.py  this_is.py  tmdb.py  ui.py  uwu.py
aninas/utils/types/: anime_girls.py  arch.py
aninas/utils/types/codeberg/: __init__.py  comment.py  issue.py  organization.py  repository.py  user.py
aninas/utils/types/tmdb/: movie.py  person.py  search.py  tv.py
scripts/: docker.py
